force-app/main/default/objects/Tracabilite__c/Tracabilite__c.object-meta.xml
<CustomObject>
    <label>Tracabilité</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracabilité</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>