force-app/main/default/objects/Tracabilite__c/fields/Materiau__c.field-meta.xml
<CustomField>
    <fullName>Materiau__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matériau</label>
    <referenceTo>Materiau__c</referenceTo>
    <relationshipLabel>Tracabilité</relationshipLabel>
    <relationshipName>Tracabilit</relationshipName>
    <type>Lookup</type>
</CustomField>