force-app/main/default/objects/Tracabilite__c/fields/Num_ro_de_lot__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_de_lot__c</fullName>
    <label>Numéro de lot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>