force-app/main/default/objects/Tracabilite__c/fields/Ordonnance__c.field-meta.xml
<CustomField>
    <fullName>Ordonnance__c</fullName>
    <label>Ordonnance</label>
    <referenceTo>Ordonnance__c</referenceTo>
    <relationshipLabel>Tracabilité</relationshipLabel>
    <relationshipName>Tracabilit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>