force-app/main/default/objects/Tracabilite__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <formula>IF(ISBLANK( CreatedBy.Country ),&quot;France&quot;,CreatedBy.Country)</formula>
    <label>Pays</label>
    <type>Text</type>
</CustomField>